test/fixture/invalid/importCycleA.scrypt
import "./importCycleB.scrypt";

contract A {
  public function main() {
    require(true);
  }
}